# Ewhu

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ClassLexer.cpp  Ewhu.cpp  Node.cpp  Node.h  README.md  Scanner.cpp  Token.cpp  Token.h  ast.cpp  ast.json  bench.cpp  bench.ewhu  bench_1000_easy.ewhu  bench_1000_prompt.ewhu  cmakelists.txt  expression.cpp  expression_statement.h  group.cpp  head.h  highlight.h  infix.cpp  infix.h  integer.cpp  integer.h  interger.cpp  lexer.cpp  lexer.h  node.cpp  node.h  parser.cpp  parser.h  program.cpp  program.h  statement.cpp  t1.txt
.github/workflows/: cmake-multi-platform.yml
ast/: boolean.h  expression_statement.h  head.h  identifier.h  if_statement.h  infix.h  integer.h  node.cpp  node.h  prefix.h  statement.h  statement_block.h  string.h  while.h  while_statement.h
bench/: bench_100000_assign.ewhu  bench_100000_if.ewhu  bench_100000_while.ewhu  break.ewhu  fib27.ewhu  prime.ewhu  recursion.ewhu  sieve.ewhu  super copy.ewhu  super.ewhu  temp.cpp  temp.py  test1.ewhu
evaluator/: evaluator.cpp  evaluator.h  expression.cpp  fraction.cpp  head.h  identifier.cpp  if_statement.cpp  infix.cpp  integer.cpp  object.cpp  prefix.cpp  program.cpp  scope.h  statement.cpp  statement_block.cpp  while_statement.cpp
lexer/: lexer.cpp  lexer.h  token.h
object/: boolean.h  error.h  fraction.h  head.h  header.h  identifier.h  integer.h  object.cpp  object.h  object_function.h  scope.cpp  string.h
parser/: boolean.cpp  expression.cpp  group.cpp  head.h  identifier.cpp  if_statement.cpp  infix.cpp  integer.cpp  object.cpp  parser.cpp  parser.h  prefix.cpp  program.cpp  statement.cpp  statement_block.cpp  string.cpp  while_statement.cpp
